#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

JG-2011-03-21-0: Cleanup:     removed old review directory

MD-2009-12-11-0: CVS:		Created V62u5_TAG
-------------------------------------------------------
MD-2009-12-09-0: CVS:		Created V62u5RC2_TAG
-------------------------------------------------------
MD-2009-12-02-1: CVS:		Created V62u5RC1_TAG
-------------------------------------------------------

MD-2009-12-01-0: Enhancem:    checkin version file

LP-2009-11-27-0: Bugfix:      dbwriter.conf can not be read during upgrading
                              dbwriter
                 Bugster:     6902920
                 Issue:       3187
                 Bugfix:      dbwriter installer shows error message if SGE_ROOT
                              is not set
                 Bugster:     6902923
                 Issue:       3187
                 Review:      MD

SH-2009-11-25-0: Bugfix:      Fixed TestParsing.java junit test
                 Review:      CR

MD-2009-11-19-0: CVS:		Created V62u5beta2_TAG
-------------------------------------------------------
MD-2009-11-17-0: CVS:		Created V62u5beta1_TAG
-------------------------------------------------------
MD-2009-11-09-0: CVS:		Created V62u5alpha2_TAG
-------------------------------------------------------

LP-2009-11-06-0: Bugfix:      Cannot install dbwriter as root when
                              $SGE_ROOT/dbwriter is owned by root and
                              admin_user!=root
                 Bugster:     6894239
                 Issue:       3173
                 Review:      MD

CR-2009-10-19-0: Cleanup:     Enhanced logging in junit tests