@@ -27,17 +27,19 @@
 #
 #  All Rights Reserved.
 #
+#  Portions of this code are Copyright 2011 Univa Inc.
+#
 ##########################################################################
 #___INFO__MARK_END__
 
-product.version=6.2u5
-product.name=SGE
-product.longname=Grid Engine
+product.version=8.0.0
+product.name=UGE
+product.longname=Univa Grid Engine
 product.windowtitle=SGE ARCo Common API
 product.doctitle=SGE ARCo Common API
-product.copyright=Copyright &#169; 2007 Sun Microsystems All Rights Reserved.
-product.arco.name=SGE ARCo
-product.gridengine.name=Grid Engine
+product.copyright=Copyright &#169; 2011 Univa Inc. All Rights Reserved.
+product.arco.name=UGE ARCo
+product.gridengine.name=Univa Grid Engine
 product.copyright.dir=../common
 
 #  build properties for java
@@ -48,27 +50,28 @@ javac.debug=true
 #
 # Commmon site directories
 #
-junit.jar=/vol2/tools/SW/java/junit3.8.1/junit.jar
-jwsdp.home=/vol2/tools/SW/jwsdp-1.3
-swc3.0.jato.jar=/vol2/tools/SW/java/swc-3.0/jato.jar
-swc3.0.cc.jar=/vol2/tools/SW/java/swc-3.0/cc.jar
-swc3.0.serviceapi.jar=/vol2/tools/SW/java/swc-3.0/serviceapi.jar
-swc3.0.serviceimpl.jar=/vol2/tools/SW/java/swc-3.0/serviceimpl.jar
-swc3.0.webcommon.jar=/vol2/tools/SW/java/swc-3.0/SMIWebCommon.jar
-swc3.0.consoleutil.jar=/vol2/tools/SW/java/swc-3.0/consoleutil.jar
-swc3.0.servlet.jar=/vol2/tools/SW/java/swc-3.0/servlet.jar
-oracle.jdbcdriver=/vol2/tools/SW/oracle/9.0.1/solaris64/OraHome1/jdbc/lib/classes12.jar
-postgres.jdbcdriver=/vol2/tools/SW/java/arco_3rdparty/postgresql-8.1-409.jdbc3.jar
-mysql.jdbcdriver=/vol2/tools/SW/java/mysql-connector-java-5.0.4/mysql-connector-java-5.0.4-bin.jar
-webapps.home=/var/opt/webconsole/webapps
-jfreechart.jar=/vol2/tools/SW/java/jfreechart-0.9.21/jfreechart-0.9.21.jar
-jcommon.jar=/vol2/tools/SW/java/jcommon-0.9.7/jcommon-0.9.7.jar
-avalon.jar=/vol2/tools/SW/java/arco_3rdparty/avalon-framework-cvs-20020806.jar
-iText.jar=/vol2/tools/SW/java/arco_3rdparty/iText-2.1.0.jar
-batik.jar=/vol2/tools/SW/java/arco_3rdparty/batik.jar
-jimi.zip=/vol2/tools/SW/java/Jimi/JimiProClasses.zip
-jh.home=/vol2/tools/SW/java/javahelp-2.0/javahelp
-emma.dir=/vol2/tools/SW/java/emma/lib
+junit.jar=/tools/PKG/junit-4.8.2/lib/junit-4.8.2.jar
+jaxb.home=/tools/PKG/jaxb-ri-20110115
+#jwsdp.home=/home/joga/jwsdp-2.0
+#swc3.0.jato.jar=/vol2/tools/SW/java/swc-3.0/jato.jar
+#swc3.0.cc.jar=/vol2/tools/SW/java/swc-3.0/cc.jar
+#swc3.0.serviceapi.jar=/vol2/tools/SW/java/swc-3.0/serviceapi.jar
+#swc3.0.serviceimpl.jar=/vol2/tools/SW/java/swc-3.0/serviceimpl.jar
+#swc3.0.webcommon.jar=/vol2/tools/SW/java/swc-3.0/SMIWebCommon.jar
+#swc3.0.consoleutil.jar=/vol2/tools/SW/java/swc-3.0/consoleutil.jar
+#swc3.0.servlet.jar=/vol2/tools/SW/java/swc-3.0/servlet.jar
+#oracle.jdbcdriver=/vol2/tools/SW/oracle/9.0.1/solaris64/OraHome1/jdbc/lib/classes12.jar
+#postgres.jdbcdriver=/vol2/tools/SW/java/arco_3rdparty/postgresql-8.1-409.jdbc3.jar
+#mysql.jdbcdriver=/vol2/tools/SW/java/mysql-connector-java-5.0.4/mysql-connector-java-5.0.4-bin.jar
+#webapps.home=/var/opt/webconsole/webapps
+#jfreechart.jar=/vol2/tools/SW/java/jfreechart-0.9.21/jfreechart-0.9.21.jar
+#jcommon.jar=/vol2/tools/SW/java/jcommon-0.9.7/jcommon-0.9.7.jar
+#avalon.jar=/vol2/tools/SW/java/arco_3rdparty/avalon-framework-cvs-20020806.jar
+#iText.jar=/vol2/tools/SW/java/arco_3rdparty/iText-2.1.0.jar
+#batik.jar=/vol2/tools/SW/java/arco_3rdparty/batik.jar
+#jimi.zip=/vol2/tools/SW/java/Jimi/JimiProClasses.zip
+#jh.home=/vol2/tools/SW/java/javahelp-2.0/javahelp
+emma.dir=/tools/PKG/emma-2.0.5312
 
 #
 # Path to SGE_ROOT
@@ -94,9 +97,9 @@ catman.host=<host for building the catman pages>
 
 #
 #  Specify the MANMODE for ascman and catman.
-#  Allowed values are: ge geee sge sgeee
+#  Allowed values are: ge uge
 #
-man.mode=ge
+man.mode=uge
 
 #
 #   Deploy options
