@@ -8,9 +8,13 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
-JG-2011-03-21-0: Cleanup:     removed old review directory
+JG-2011-03-23-0: Bugfix:      fixed the build with current versions of tools
+                              (Java, ant, jaxb, removed dependency to jwsdp)
+                 Cleanup:     removed old review directory
+                 Issue:       AR-2
+                 Review:      DG
 
-MD-2009-12-11-0: CVS:		Created V62u5_TAG
+mD-2009-12-11-0: CVS:		Created V62u5_TAG
 -------------------------------------------------------
 MD-2009-12-09-0: CVS:		Created V62u5RC2_TAG
 -------------------------------------------------------
